--- a/TravelApp/DesktopHost/View/ClientNavigationView.xaml
+++ b/TravelApp/DesktopHost/View/ClientNavigationView.xaml
@@ -19,123 +19,132 @@
                 BorderBrush="#00ACACAC"
                 Background="#DFE6F0"
         >
-        <TabItem Width="170"
+        <TabItem Width="190"
                  Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
-                    <TextBlock 
-                        Width="170"
-                        Text="Trips"
+                    <Button 
+                        Width="190"
+                        Height="50"
+                        Content="Trips"
                         ToolTip="Check out trips we offer"
                         Background="Transparent"
+                        BorderBrush="Transparent"
                         Foreground="#000000"
                         FontSize="20"
                         FontWeight="Bold"
-                        TextAlignment="Center"/>
+                        BorderThickness="0,0,0,0"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
-        <TabItem Width="170" Height="50">
+        <TabItem Width="190" Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
-                    <TextBlock 
-                        Width="170"
-                        Text="Attractions"
+                    <Button 
+                        Width="190"
+                        Height="50"
+                        Content="Attractions"
                         ToolTip="Check out attractions"
                         Background="Transparent"
+                        BorderBrush="Transparent"
                         Foreground="#000000"
                         FontSize="20"
-                        FontWeight="Bold"
-                        TextAlignment="Center"/>
+                        FontWeight="Bold"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
-        <TabItem Width="170"
+        <TabItem Width="190"
                  Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
-                    <TextBlock 
-                        Width="170"
-                        Text="Stay&amp;Eat"
+                    <Button 
+                        Width="190"
+                        Height="50"
+                        Content="Stay&amp;Eat"
                         ToolTip="Check out accommodations and restaurants"
                         Background="Transparent"
+                        BorderBrush="Transparent"
                         Foreground="#000000"
                         FontSize="20"
-                        FontWeight="Bold"
-                        TextAlignment="Center"/>
+                        FontWeight="Bold"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
-        <TabItem Width="170"
+        <TabItem Width="190"
                  Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
-                    <TextBlock 
-                        Width="170"
-                        Text="My Trips"
+                    <Button 
+                        Width="190"
+                        Height="50"
+                        Content="My Trips"
                         ToolTip="Check out bought trips"
                         Background="Transparent"
+                        BorderBrush="Transparent"
                         Foreground="#000000"
                         FontSize="20"
-                        FontWeight="Bold"
-                        TextAlignment="Center"/>
+                        FontWeight="Bold"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
-        <TabItem Width="170"
+        <TabItem Width="190"
                  Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
-                    <TextBlock 
-                        Width="170"
-                        Text="My Reservations"
+                    <Button 
+                        Width="190"
+                        Height="50"
+                        Content="My Reservations"
                         ToolTip="Check out your reservations"
                         Background="Transparent"
+                        BorderBrush="Transparent"
                         Foreground="#000000"
                         FontSize="20"
-                        FontWeight="Bold"
-                        TextAlignment="Center"/>
+                        FontWeight="Bold"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
 
-        <TabItem Width="170"
+        <TabItem Width="190"
                  Height="50">
             <TabItem.Header>
                 <StackPanel Width="auto"
                             Height="auto">
-                    <TextBlock 
-                        Width="170"
-                        Text="Help"
+                    <Button 
+                        Width="190"
+                        Height="50"
+                        Content="Help"
                         ToolTip="Need help? Click me!"
                         Background="Transparent"
+                        BorderBrush="Transparent"
                         Foreground="#000000"
                         FontSize="20"
-                        FontWeight="Bold"
-                        TextAlignment="Center"/>
+                        FontWeight="Bold"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
-        <TabItem Width="170"
+        <TabItem Width="190"
                  Height="50"
                  Margin="50 0 0 0">
         <TabItem.Header>
             <StackPanel Width="auto"
                             Height="auto">
-                    <TextBlock 
-                        Width="170"
-                        Text="Log Out"
+                    <Button 
+                        Width="190"
+                        Height="50"
+                        Content="Log Out"
                         ToolTip="Log out from your account"
                         Background="Transparent"
+                        BorderBrush="Transparent"
                         Foreground="#000000"
                         FontSize="20"
                         FontWeight="Bold"
-                        TextAlignment="Center"/>
+                        Command="{Binding LogOut}"/>
                 </StackPanel>
         </TabItem.Header>
         </TabItem>
