--- a/TravelApp/DesktopHost/View/SignupView.xaml
+++ b/TravelApp/DesktopHost/View/SignupView.xaml
@@ -6,14 +6,139 @@
              xmlns:local="clr-namespace:TravelApp.DesktopHost.View"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
+             xmlns:views="clr-namespace:TravelApp.DesktopHost.View"
              mc:Ignorable="d"
-             Background="White"
-             Width="{x:Static SystemParameters.PrimaryScreenWidth}"  
-             Height="{x:Static SystemParameters.PrimaryScreenHeight}"
+             Background="#DFE6F0"
+             SizeChanged="Window_SizeChanged"
              d:DataContext="{d:DesignInstance Type=viewmodels:SignupViewModel}">
-    <Grid>
-        <Label Padding="150px">Welcome to Sign Up Page!</Label>
-        <Button
-            Command="{Binding Login}">Go to Login Page</Button>
-    </Grid>
+    <ScrollViewer>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="1.5*"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="1.5*"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="1*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="auto"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <materialDesign:Snackbar MessageQueue="{Binding SnackbarMessageQueue}"
+                                 Grid.Row="6"
+                                 Grid.Column="1"
+                                 Margin="0,0,0,20">
+                <materialDesign:SnackbarMessage Content="{Binding SnackbarMessageQueue}" />
+            </materialDesign:Snackbar>
+
+            <TextBlock FontSize="{Binding TextFontSize}"
+                Foreground="#161A25"
+                TextAlignment="Left"
+                Grid.Row="1"
+                Grid.Column="1"
+                FontWeight="Medium"
+                FontFamily="Poppins"
+                MaxWidth="439"
+                x:Name="Title">Sign up</TextBlock>
+            <StackPanel Grid.Row="2"
+                    Grid.Column="1"
+                    Width="{Binding Width}"
+                    Height="90"
+                    Margin="0,0,0,20">
+                <Label Margin="0 0 0 3"
+                   Height="27"
+                   FontSize="18"
+                   FontFamily="Poppins"
+                   FontWeight="Regular"
+                   HorizontalAlignment="Left">Email</Label>
+                <TextBox Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                     FontSize="15"
+                     Margin="0"
+                     materialDesign:HintAssist.Hint="name@domain.com"
+                     materialDesign:HintAssist.Foreground="#4889E6"
+                     Background="#A5FFFFFF"
+                     materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
+                     ToolTip="Enter email address associated with your account"
+                     Text="{Binding Email}"
+                     PreviewTextInput="TextBox_PreviewTextInputEmail">
+                </TextBox>
+            </StackPanel>
+            <StackPanel Grid.Row="3"
+                    Grid.Column="1"
+                    Width="{Binding Width}"
+                    Height="90"
+                    Margin="0,10,0,0">
+                <Label Margin="0"
+                   Height="27"
+                   FontSize="18"
+                   FontFamily="Poppins"
+                   FontWeight="Regular"
+                   HorizontalAlignment="Left">Password</Label>
+                <views:BindablePasswordBox 
+                 Password="{Binding Password}"/>
+            </StackPanel>
+
+            <Button Grid.Column="1"
+                Grid.Row="4"
+                VerticalAlignment="Bottom"
+                Width="{Binding Width}"
+                Height="40"
+                ToolTip="Click to sign up to the app"
+                Content="Signup"
+                Style="{StaticResource FormButton}"
+                Command="{Binding Signup}"
+                IsDefault="True" Cursor="Hand" >
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="7"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <StackPanel Grid.Column="1"
+                    Grid.Row="5"
+                    Width="{Binding Width}"
+                    Height="80">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Label HorizontalAlignment="Right"
+                       Grid.Column="0"
+                       FontSize="20"
+                       Margin="0, 10, 10, 0"
+                       Foreground="#808080"
+                       FontFamily="Poppins"
+                       FontWeight="Medium">Already have an account ?</Label>
+                    <Button Grid.Column="1"
+                        Command="{Binding Login}">
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <ContentPresenter />
+                            </ControlTemplate>
+                        </Button.Template>
+                        <TextBlock HorizontalAlignment="Left"
+                       FontSize="20"
+                       Margin="10, 10, 0, 0"
+                       Foreground="#4889E6" 
+                       Background="#DFE6F0"
+                       FontFamily="Poppins" 
+                       ToolTip="Go to sign up page"
+                       FontWeight="Medium" Cursor="Hand"
+                       TextDecorations="Underline"
+                       Text="Login"/>
+                    </Button>
+                </Grid>
+
+            </StackPanel>
+
+        </Grid>
+    </ScrollViewer>
 </UserControl>
